# jupyterscad

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  triggertest
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autopublish-testpypi.yml  openscad_discovery_test.yml  publish-pypi.yml  publish-testpypi.yml  publish-to-test-pypi.yml  publish.yml  test.yml  test_openscad_discovery.yml
api/: index.html
docker/: Dockerfile  init.sh  test.ipynb
docs/: api.md  index.md  usage.md
jupyter_scad/: __init__.py  _render.py  _visualize.py
jupyterscad/: __init__.py  _render.py  _visualize.py
scripts/: build-image.sh  run.sh  test.ipynb
search/: search_index.json
src/jupyterscad/: __init__.py  _openscad.py  _render.py  _view.py  _visualize.py  exceptions.py
tests/: conftest.py  test_openscad.py  test_render.py  test_view.py  test_visualize.py
tests/data/: test.stl
usage/: index.html
